--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -3,13 +3,13 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content" >
     <view android:layout_width="match_parent"
-          android:layout_height="match_parent"
+          android:layout_height="300dp"
           class="com.dubu.sukgod.MjpegView" android:id="@+id/mpeg_view"/>
     <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_marginLeft="0dp"
-            android:layout_alignParentTop="true" android:layout_marginTop="0dp">
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/mpeg_view" android:layout_alignParentLeft="true">
         <ListView
                 android:id="@+id/android:list"
                 android:layout_width="wrap_content"
