--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -31,6 +31,13 @@
             android:id="@+id/btn_write" android:layout_alignParentBottom="true" android:layout_alignParentLeft="false"
             android:layout_marginBottom="50dp"
             android:background="@android:drawable/ic_menu_edit" android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"/>
+            />
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_album" android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false"
+            android:layout_alignTop="@+id/btn_write"
+            android:background="@android:drawable/ic_menu_gallery" android:layout_alignParentRight="true"/>
 
 </RelativeLayout>
