--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -44,5 +44,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_light" android:layout_alignLeft="@+id/linearLayout"
             android:layout_alignTop="@+id/mpeg_view" android:checked="false"/>
+    <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/img_light" android:layout_alignParentLeft="false"
+            android:layout_alignParentTop="false" android:src="@drawable/lighttext"
+            android:layout_below="@+id/btn_light" android:layout_alignLeft="@+id/btn_light"
+            android:layout_marginLeft="20dp" android:layout_marginTop="-20dp"/>
 
 </RelativeLayout>
