--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -38,7 +38,8 @@
             android:id="@+id/btn_album" android:layout_alignParentLeft="false"
             android:layout_alignParentTop="false"
             android:layout_alignTop="@+id/btn_write"
-            android:background="@android:drawable/ic_menu_gallery" android:layout_alignParentRight="true"/>
+            android:background="@android:drawable/ic_menu_gallery" android:layout_alignParentRight="true"
+            android:textColor="#ffe932" android:textStyle="bold|normal"/>
     <ToggleButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
