--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -47,5 +47,10 @@
             android:textColor="@android:color/background_dark"
             android:clickable="false" android:background="@drawable/btnlight" android:textOn=" " android:textOff=" "
             android:singleLine="false"/>
+    <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_other" android:layout_alignRight="@+id/mpeg_view" android:layout_above="@+id/btn_album"
+            android:singleLine="true" android:textColor="#fff213" android:background="@android:drawable/ic_menu_gallery"/>
 
 </RelativeLayout>
